--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <a href="spotifyvis/">SpotifyVis</a>
+    <a href="spotifyvis/Projeto/src/_web/">SpotifyVis</a>
   </body>
 </html>
