added link to tlc

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <body>
     <a href="spotifyvis/Projeto/src/_web/">SpotifyVis</a>
+    <a href="tlcvisualizer/src/">TLCVisualizer</a>
   </body>
 </html>
