--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <a href="spotifyvis/Projeto/src/_web/">SpotifyVis</a>
-    <a href="tlcvisualizer/src/">TLCVisualizer</a>
+    <a href="taxidrivis/src/">Taxi DriVis</a>
   </body>
 </html>
