added link genetical

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <body>
     <a href="spotifyvis/Projeto/src/_web/">SpotifyVis</a>
     <a href="taxidrivis/src/">Taxi DriVis</a>
+    <a href="geneticalgvis/">GeneticAlgVis</a>
   </body>
 </html>
