--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <a href="spotifyvis/Projeto/src/_web/">SpotifyVis</a>
     <a href="taxidrivis/src/">Taxi DriVis</a>
     <a href="geneticalgvis/">GeneticAlgVis</a>
+    <a href="recife_visse/">RecifeVisse</a>
   </body>
 </html>
