--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <a href="taxidrivis/src/">Taxi DriVis</a>
     <a href="geneticalgvis/">GeneticAlgVis</a>
     <a href="recife_visse/">RecifeVisse</a>
+    <a href="geometryVis/">GeometryVis</a>
   </body>
 </html>
