added link producao academica

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <a href="geneticalgvis/">GeneticAlgVis</a>
     <a href="recife_visse/">RecifeVisse</a>
     <a href="geometryVis/">GeometryVis</a>
+        <a href="producao_academica/Beta/">ProducaoAcademicaCin</a>
   </body>
 </html>
