fixed special character symbol

--- a/2016_2.html
+++ b/2016_2.html
@@ -83,7 +83,7 @@
 <!----------------------------------------------------------->
 <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/genetic_alg.jpg" height="150px"> </td>
 <td width="70%" align="left" valign="middle" bgcolor="white"> <font size="3" color="black">	      
-    <b>T&iacute;tulo: Visualiza&ccedil;&atilde;o Algoritmos Genéticos</b>
+    <b>T&iacute;tulo: Visualiza&ccedil;&atilde;o Algoritmos Gen&eacute;ticos</b>
     <br>Karla Falc&atilde;o (kpsf@cin.ufpe.br)
       <br>Helmiton Cunha (hmscj@cin.ufpe.br)
     <br>Demo: <a href="https://visualizacao-ufpe.github.io/geneticalgvis/index.html" target="_blank">link</a> 
