--- a/2016_2.html
+++ b/2016_2.html
@@ -100,6 +100,18 @@
     </br>Demo: <a href="https://visualizacao-ufpe.github.io/geometryVis/" target="_blank">link</a> <!-- Slides: <a href="https://visualizacao-ufpe.github.io/airfarevis/presentation/presentation.pdf" target="_blank">link</a>  -->
 		</font>
 	      </td>
+    </tr>
+    <!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/linealgvis.jpg" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Analytical Geometry Visualization</b>
+      </br>Camila Braga (alsas@cin.ufpe.br)
+      <br>Daniel Oliveira (brbc@cin.ufpe.br)
+	<br>Rafael Nunes (rngs@cin.ufpe.br)
+	</br>Demo: <a href="https://peaonunes.github.io/edurec-vis-visualizacao-2016-2/" target="_blank">link</a> Repository: <a href="https://github.com/peaonunes/edurec-vis-visualizacao-2016-2" target="_blank">link</a>
+		</font>
+	      </td>
 	    </tr>
 <!----------------------------------------------------------->
     <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/meucongresso.jpg" height="150px"> </td>
