--- a/2016_2.html
+++ b/2016_2.html
@@ -105,7 +105,7 @@
     <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/linealgvis.jpg" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
-        <b>T&iacute;tulo: Analytical Geometry Visualization</b>
+        <b>T&iacute;tulo: EDUREC</b>
       </br>Camila Braga (alsas@cin.ufpe.br)
       <br>Daniel Oliveira (brbc@cin.ufpe.br)
 	<br>Rafael Nunes (rngs@cin.ufpe.br)
