--- a/2016_2.html
+++ b/2016_2.html
@@ -102,7 +102,7 @@
 	      </td>
     </tr>
     <!----------------------------------------------------------->
-    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/linealgvis.jpg" height="150px"> </td>
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/edurec.jpg" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
         <b>T&iacute;tulo: EDUREC</b>
