--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 	</a>
 	<ul class="dropdown-menu">
 	  <li id="nav-assignment1">
-	    <!-- <a href="assignment1.html">Lista 1</a> -->
 	    <a href="2016_2.html">2016.2</a>
+	    <a href="2017_1.html">2017.1</a>
 	  </li>
 	  <!-- <li id="nav-assignment1"> -->
 	  <!--   <\!-- <a href="assignment1.html">Lista 1</a> -\-> -->
