--- a/2017_1.html
+++ b/2017_1.html
@@ -76,7 +76,7 @@
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
         <b>T&iacute;tulo: Acidentes de Trânsito no Recife</b>
-      </br>Luís Delgado (lhds@cin.ufpe.br)
+      </br>Lu&iacute;s Delgado (lhds@cin.ufpe.br)
       <br>Manuela Barbosa (msb3@cin.ufpe.br)
 	<br>Marina Lima (mml3@cin.ufpe.br)
 	</br>Projeto: <a href="https://m4nuela22.github.io/projetoVisualizacao/" target="_blank">link</a> 
@@ -96,7 +96,7 @@
     <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/noimageyet.jpg" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
-        <b>T&iacute;tulo: Visualização de Programming Skills</b>
+        <b>T&iacute;tulo: Visualiza&ccedil;&atilde;o de Programming Skills</b>
       </br>Filipe Nogueira (fnj2@cin.ufpe.br)
       <br>Isabel Lima (iill@cin.ufpe.br)
 	<br>Isabelly Damascena (icfd@cin.ufpe.br)
@@ -109,7 +109,7 @@
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
         <b>T&iacute;tulo: SweetHome</b>
-      </br>José Rodolfo Farias (jrlf@cin.ufpe.br)
+      </br>Jos&eacute; Rodolfo Farias (jrlf@cin.ufpe.br)
 	</br>Projeto: <a href="https://rodolfofarias.github.io/sweethome-visualizacao-2017-1/" target="_blank">link</a>
 		</font>
 	      </td>
