--- a/2017_1.html
+++ b/2017_1.html
@@ -138,7 +138,33 @@
     </br>Projeto: <a href="https://hpbl.github.io/VAST-MC1/" target="_blank">link</a>  
 		</font>
 	      </td>
-    </tr>  
+    </tr>
+<!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/batvis-2017_1.jpg" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: BatVis</b>
+      </br>Bruno Henrique Lima (bhlvm@cin.ufpe.br)
+      <br>Eduardo Henique (ehmr@cin.ufpe.br)
+	<br>Ricardo Barioni (rrb@cin.ufpe.br)
+    </br>Projeto: <a href="https://rrbarioni.github.io/BatVis-visualizacao-2017-1/" target="_blank">link</a> <!-- Slides: <a href="https://visualizacao-ufpe.github.io/airfarevis/presentation/presentation.pdf" target="_blank">link</a>  -->
+		</font>
+	      </td>
+	    </tr>
+<!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/big2000-2017_1.jpg" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Big 2000</b>
+      </br>Dicksson Ramon (droa@cin.ufpe.br)
+      <br>Lucas de Souza (lsa2@cin.ufpe.br)
+	<br>Victor Chen (vsyc@cin.ufpe.br)
+    </br>Projeto: <a href="https://vsychen.github.io/Big-2000-visualizacao-2017-1/" target="_blank">link</a> <!-- Slides: <a href="https://visualizacao-ufpe.github.io/airfarevis/presentation/presentation.pdf" target="_blank">link</a>  -->
+		</font>
+	      </td>
+	    </tr>
+<!----------------------------------------------------------->
+    
 	    </tbody>
 	  </table>
 
