--- a/2017_1.html
+++ b/2017_1.html
@@ -164,6 +164,29 @@
 	      </td>
 	    </tr>
 <!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/redit-2017_1.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Reddit Viewer</b>
+      </br>Ana França (acff@cin.ufpe.br)
+      <br>Édipo Ândersen (eafs2@cin.ufpe.br)
+	<br>Rodrigo Farias (rff2@cin.ufpe.br)
+    </br>Projeto: <a href="https://acff.github.io/redditviewer-visualizacao-2017-1.github.io/#home" target="_blank">link</a> <!-- Slides: <a href="https://visualizacao-ufpe.github.io/airfarevis/presentation/presentation.pdf" target="_blank">link</a>  -->
+		</font>
+	      </td>
+	    </tr>
+<!----------------------------------------------------------->
+    <td width="20%" width="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/microcefaliavis-2017_1.jpg" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: MicrocefaliaVis</b>
+	<br>Arthur Bezerra (abf2@cin.ufpe.br)
+      </br>Leonardo Espíndola (lre@cin.ufpe.br)      
+    </br>Projeto: <a href="https://lrexxx.github.io/microcefaliavis-visualizacao-2017-1/" target="_blank">link</a> <!-- Slides: <a href="https://visualizacao-ufpe.github.io/airfarevis/presentation/presentation.pdf" target="_blank">link</a>  -->
+		</font>
+	      </td>
+	    </tr>
+<!----------------------------------------------------------->
     
 	    </tbody>
 	  </table>
