--- a/2017_1.html
+++ b/2017_1.html
@@ -93,7 +93,7 @@
     <!-- <br>Slides: -->
 </font></td></tr>
 <!----------------------------------------------------------->
-    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/noimageyet.jpg" height="150px"> </td>
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/programmingskillsvis-2017_1.jpg" width="200px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
         <b>T&iacute;tulo: Visualiza&ccedil;&atilde;o de Programming Skills</b>
@@ -127,7 +127,7 @@
 	      </td>
 	    </tr>
 <!----------------------------------------------------------->
-    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/noimageyet.jpg" height="150px"> </td>
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/vast1-2017_1.jpg" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
         <b>T&iacute;tulo: Vast Challenge 1</b>
