--- a/2017_1.html
+++ b/2017_1.html
@@ -187,7 +187,17 @@
 	      </td>
 	    </tr>
 <!----------------------------------------------------------->
-    
+<td width="20%" width="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/vast2-2017_1.jpg" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Vast Challenge 2</b>
+	<br>João Vicente (jpjvs@cin.ufpe.br)
+      </br>Rogério Santos (rbs7@cin.ufpe.br)      
+    </br>Projeto: <a href="https://rbs7.github.io/CHEMICALMONITORING-visualizacao-2017-1/" target="_blank">link</a> <!-- Slides: <a href="https://visualizacao-ufpe.github.io/airfarevis/presentation/presentation.pdf" target="_blank">link</a>  -->
+		</font>
+	      </td>
+	    </tr>
+<!----------------------------------------------------------->
 	    </tbody>
 	  </table>
 
