--- a/2017_1.html
+++ b/2017_1.html
@@ -168,8 +168,8 @@
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
         <b>T&iacute;tulo: Reddit Viewer</b>
-      </br>Ana França (acff@cin.ufpe.br)
-      <br>Édipo Ândersen (eafs2@cin.ufpe.br)
+      </br>Ana Fran&ccedil;a (acff@cin.ufpe.br)
+      <br>&Eacute;dipo Andersen (eafs2@cin.ufpe.br)
 	<br>Rodrigo Farias (rff2@cin.ufpe.br)
     </br>Projeto: <a href="https://acff.github.io/redditviewer-visualizacao-2017-1.github.io/#home" target="_blank">link</a> <!-- Slides: <a href="https://visualizacao-ufpe.github.io/airfarevis/presentation/presentation.pdf" target="_blank">link</a>  -->
 		</font>
@@ -181,7 +181,7 @@
       <font size="3" color="black">	      
         <b>T&iacute;tulo: MicrocefaliaVis</b>
 	<br>Arthur Bezerra (abf2@cin.ufpe.br)
-      </br>Leonardo Espíndola (lre@cin.ufpe.br)      
+      </br>Leonardo Esp&iacute;ndola (lre@cin.ufpe.br)      
     </br>Projeto: <a href="https://lrexxx.github.io/microcefaliavis-visualizacao-2017-1/" target="_blank">link</a> <!-- Slides: <a href="https://visualizacao-ufpe.github.io/airfarevis/presentation/presentation.pdf" target="_blank">link</a>  -->
 		</font>
 	      </td>
@@ -191,8 +191,8 @@
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
         <b>T&iacute;tulo: Vast Challenge 2</b>
-	<br>João Vicente (jpjvs@cin.ufpe.br)
-      </br>Rogério Santos (rbs7@cin.ufpe.br)      
+	<br>Jo&atilde;o Vicente (jpjvs@cin.ufpe.br)
+      </br>Rog&eacute;rio Santos (rbs7@cin.ufpe.br)      
     </br>Projeto: <a href="https://rbs7.github.io/CHEMICALMONITORING-visualizacao-2017-1/" target="_blank">link</a> <!-- Slides: <a href="https://visualizacao-ufpe.github.io/airfarevis/presentation/presentation.pdf" target="_blank">link</a>  -->
 		</font>
 	      </td>
