--- a/2017_1.html
+++ b/2017_1.html
@@ -198,6 +198,34 @@
 	      </td>
 	    </tr>
 <!----------------------------------------------------------->
+<td width="20%" width="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/preysupon-2017_1.jpg" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Preys Upon A Magic: The Gathering limited play creature evaluator</b>
+	<br>Antonio Harger (ahr@cin.ufpe.br)
+	<br>Jo&atilde;o Ricardo (jrs4@cin.ufpe.br)
+       </br>Lucas Biagini (lbs4@cin.ufpe.br)      
+    </br>Projeto: <a href="https://joaosant0s.github.io/PreysUpon-visualizacao-2017-1/" target="_blank">link</a>
+		</font>
+	      </td>
+	    </tr>
+<!----------------------------------------------------------->
+<td width="20%" width="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/war-2017_1.jpg" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Correlates of War</b>
+	<br>Esdras Barbosa (eblsj@cin.ufpe.br)
+      </br>Giulio Carvalho (gcc@cin.ufpe.br)
+            </br>Walber Macedo (wmr@cin.ufpe.br)      
+    </br>Projeto: <a href="http://correlates-war.herokuapp.com/" target="_blank">link</a>
+		</font>
+	      </td>
+	    </tr>
+<!----------------------------------------------------------->
+
+
+
+
 	    </tbody>
 	  </table>
 
