--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	  <li id="nav-assignment1">
 	    <a href="2016_2.html">2016.2</a>
 	    <a href="2017_1.html">2017.1</a>
+	    <a href="2017_2.html">2017.2</a>
 	  </li>
 	  <!-- <li id="nav-assignment1"> -->
 	  <!--   <\!-- <a href="assignment1.html">Lista 1</a> -\-> -->
