--- a/2017_2.html
+++ b/2017_2.html
@@ -105,9 +105,30 @@
 		</font>
 	      </td>
 	    </tr>
-<!----------------------------------------------------------->
-
-
+    <!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/find_destination-2017_2.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Find the best destination</b>
+          </br>Rodrigo Carlos (rcac@cin.ufpe.br)
+    	</br>Projeto: <a href="https://rcalegario.github.io/findthebestdestination/" target="_blank">link</a>
+      </font>
+    </td>
+    </tr>
+    <!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/ny_crimes-2017_2.jpeg" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Find the best destination</b>
+          </br>Bruno Vitorino (bvcl@cin.ufpe.br)
+	  </br>Caio Rocha (crp3@cin.ufpe.br)
+          </br>Jo&atilde;o Vasconcelos (jvsn@cin.ufpe.br)
+          </br>Pedro Lins (plal@cin.ufpe.br)
+	</br>Projeto: <a href="https://bvcl.github.io/NY-Crime-Data-visualizacao-2017-2/" target="_blank">link</a>
+      </font>
+    </td>
+    </tr>
+    <!----------------------------------------------------------->
 
 	    </tbody>
 	  </table>
