--- a/2017_2.html
+++ b/2017_2.html
@@ -129,7 +129,35 @@
     </td>
     </tr>
     <!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/mapa_rotina-2017_2.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Mapas de Rotina</b>
+          </br> Igor Matos (imspc@cin.ufpe.br)
+	  </br> Pedro Torchio (pt@cin.ufpe.br)
+          </br> Romain Chevy (rcm6@cin.ufpe.br)
+	</br>Projeto: <a href="https://pedrotorchio.github.io/visualizacao-mapaderotina/page/" target="_blank">link</a>
+      </font>
+    </td>
+    </tr>
+    <!----------------------------------------------------------->
+   <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/fast_food-2017_2.jpeg" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Fast Food Analytics</b>
+          </br> Anderson Mota  (ams9@cin.ufpe.br)
+	  </br> Arthur Jorge (ajew@cin.ufpe.br)
+          </br> Wilquer Lima  (wtl@cin.ufpe.br)
+	</br>Projeto: <a href="https://ajew.github.io/" target="_blank">link</a>
+      </font>
+    </td>
+    </tr>
+    <!----------------------------------------------------------->
 
+
+    
+
+    
 	    </tbody>
 	  </table>
 
