--- a/2017_2.html
+++ b/2017_2.html
@@ -141,7 +141,7 @@
     </td>
     </tr>
     <!----------------------------------------------------------->
-   <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/fast_food-2017_2.jpeg" height="150px"> </td>
+   <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/fast_food-2017_2.jpg" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
         <b>T&iacute;tulo: Fast Food Analytics</b>
