--- a/2018_1.html
+++ b/2018_1.html
@@ -60,82 +60,103 @@
 	      <table width="940" align="center" cellpadding="5" cellspacing="5" id="Table1" bgcolor="white">
 		<tbody>	
 <!----------------------------------------------------------->
-<td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/homicide_us-2017_2.png" height="150px"> </td>
+<td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/summer-2018_1.png" height="150px"> </td>
 <td width="70%" align="left" valign="middle" bgcolor="white"> <font size="3" color="black">	      
-    <b>T&iacute;tulo: Homicide Analysis in the USA</b>
-    <br>Marcela Azevedo (macm3@cin.ufpe.br)
-    <br>Maria Julia Godoy (mjgfl@cin.ufpe.br)
-    <br>Thiago Bastos (tmb2@cin.ufpe.br)
-    <br>Projeto: <a href="https://tmotabastos.github.io/homicide-analysis-visualizacao-2017-2/" target="_blank">link</a> 
+    <b>T&iacute;tulo: Summer Eletrohits 2017</b>
+    <br>Alexsandro Carvalho (avsc@cin.ufpe.br)
+    <br>José Murilo (jmsmf@cin.ufpe.br)
+    <br>Paula Vaz (pcosv@cin.ufpe.br)
+    <br>Victor Leal (vlpaa@cin.ufpe.br)    
+    <br>Projeto: <a href="https://pcosv.github.io/summer-eletrohits-2017/" target="_blank">link</a> 
     <!-- <br>Slides: -->
 </font></td></tr>
 <!----------------------------------------------------------->
-    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/speech_tagcloud-2017_2.png" width="200px"> </td>
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/porquin-2018_1.png" width="200px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
-        <b>T&iacute;tulo: Speech to Tag Cloud</b>
-      <br>Leonardo Alves (las3@cin.ufpe.br)
-      </br>Marcos Barreto (msb5@cin.ufpe.br)
-    </br>Projeto: <a href="http://speech-to-tag-cloud.herokuapp.com/" target="_blank">link</a>
+        <b>T&iacute;tulo: Porquin Dashboard</b>
+      <br>Bruno Filho (brgccf@cin.ufpe.br)
+      </br>Moabe Renato (mrov@cin.ufpe.br)
+      </br>Thomas Anderson (tafm@cin.ufpe.br)
+    </br>Projeto: <a href="http://porquinvisu.surge.sh" target="_blank">link</a>
       </font>
     </td>
     </tr>
     <!----------------------------------------------------------->
-    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/globalClimate-2017_2.png" height="150px"> </td>
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/got_2018_1.png" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
-        <b>T&iacute;tulo: Global Climate</b>
-      </br>Divino de Menezes (dgmn@cin.ufpe.br)
-      </br>Higor Cavalcante(hcmb@cin.ufpe.br)
-      </br>Ruy Brito (rbb3@cin.ufpe.br)
-	</br>Projeto: <a href="https://github.com/dgmneto/projeto-visualizacao" target="_blank">link</a>
+        <b>T&iacute;tulo: </b>
+      </br>Antonio Gadelha (ajgan@cin.ufpe.br)
+      </br>Rafael Albuquerque (rlsma@cin.ufpe.br)
+      </br>Rodrigo Carneiro (rcrs3@cin.ufpe.br)
+	</br>Projeto: <a href="https://github.com/rcrs3/game-of-thrones-visualizacao-2018-1" target="_blank">link</a>
 		</font>
 	      </td>
 	    </tr>
     <!----------------------------------------------------------->
-    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/find_destination-2017_2.png" height="150px"> </td>
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/CONETVIS-2018_1.png" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
-        <b>T&iacute;tulo: Find the best destination</b>
-          </br>Rodrigo Carlos (rcac@cin.ufpe.br)
-    	</br>Projeto: <a href="https://rcalegario.github.io/findthebestdestination/" target="_blank">link</a>
+        <b>T&iacute;tulo: CONETVIS</b>
+          </br>Andreza Vieira (afva@cin.ufpe.br)
+    	</br>Projeto: <a href="https://drez3a.github.io/CONETVIS-visualizacao-2018-1/" target="_blank">link</a>
+      </font>
+    </td>
+</tr>
+    <!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/forumview-2018_1.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: ForumView</b>
+          </br>Raphael Dourado (rasd2@cin.ufpe.br)
+    	</br>Projeto: <a href="https://github.com/raphaeldourado/forumView-visualizacao-2018-1" target="_blank">link</a>
+      </font>
+    </td>
+</tr>
+<!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/vasf-2018_1.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Perfil dos Estudantes Pré-universitários</b>
+          </br>Victor Ferreira (vasf@cin.ufpe.br)
+    	</br>Projeto: <a href="https://vasf22.github.io/perfilestudantes/" target="_blank">link</a>
+      </font>
+    </td>
+</tr>
+    <!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/ComEx-2018_1.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: ComEx</b>
+        </br>Matheus Ramos (mhpr@cin.ufpe.br)
+	  </br>Pedro Esposito (pegs@cin.ufpe.br)
+	</br>Projeto: <a href="https://mhpr.github.io/ComEx-visualizacao-2018-1/" target="_blank">link</a>
       </font>
     </td>
     </tr>
     <!----------------------------------------------------------->
-    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/ny_crimes-2017_2.jpeg" height="150px"> </td>
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/Biciflow-2018_1.png" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
-        <b>T&iacute;tulo: Find the best destination</b>
-          </br>Bruno Vitorino (bvcl@cin.ufpe.br)
-	  </br>Caio Rocha (crp3@cin.ufpe.br)
-          </br>Jo&atilde;o Vasconcelos (jvsn@cin.ufpe.br)
-          </br>Pedro Lins (plal@cin.ufpe.br)
-	</br>Projeto: <a href="https://bvcl.github.io/NY-Crime-Data-visualizacao-2017-2/" target="_blank">link</a>
+        <b>T&iacute;tulo: Biciflow</b>
+          </br> Marcio Mendes (mmcj@cin.ufpe.br)
+	  </br> João Paulo Silva (jpsl2@cin.ufpe.br)
+          </br> Paulo Henrique Muniz (phmb3@cin.ufpe.br)
+	</br>Projeto: <a href="https://pauloluna.github.io/biciflow/index.html" target="_blank">link</a>
       </font>
     </td>
     </tr>
     <!----------------------------------------------------------->
-    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/mapa_rotina-2017_2.png" height="150px"> </td>
+   <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/Spoofy-2018_1.png" height="100px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
-        <b>T&iacute;tulo: Mapas de Rotina</b>
-          </br> Igor Matos (imspc@cin.ufpe.br)
-	  </br> Pedro Torchio (pt@cin.ufpe.br)
-          </br> Romain Chevy (rcm6@cin.ufpe.br)
-	</br>Projeto: <a href="https://pedrotorchio.github.io/visualizacao-mapaderotina/page/" target="_blank">link</a>
-      </font>
-    </td>
-    </tr>
-    <!----------------------------------------------------------->
-   <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/fast_food-2017_2.jpg" height="150px"> </td>
-    <td width="70%" align="left" valign="middle" bgcolor="white">
-      <font size="3" color="black">	      
-        <b>T&iacute;tulo: Fast Food Analytics</b>
-          </br> Anderson Mota  (ams9@cin.ufpe.br)
-	  </br> Arthur Jorge (ajew@cin.ufpe.br)
-          </br> Wilquer Lima  (wtl@cin.ufpe.br)
-	</br>Projeto: <a href="https://ajew.github.io/" target="_blank">link</a>
+        <b>T&iacute;tulo: Spoofy</b>
+          </br> Lavinia Pagannini  (lfp2@cin.ufpe.br)
+	  </br> Luiz Henrique Caula (lhtc@cin.ufpe.br)
+          </br> Pedro Rossi  (pgrr@cin.ufpe.br)
+	  </br> Victor Augusto  (vapp@cin.ufpe.br)
+	</br>Projeto: <a href="https://github.com/hcaula/spoofy-web" target="_blank">link</a>
       </font>
     </td>
     </tr>
@@ -186,3 +207,4 @@
 
 </body>
 </html>
+
