--- a/2018_1.html
+++ b/2018_1.html
@@ -115,12 +115,72 @@
     </td>
 </tr>
 <!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/enade-2018_1.png" height="180px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: ENADE Micro-data</b>
+          </br>Felipe Nunes (fnw@cin.ufpe.br)
+    	</br>Projeto: <a href="https://github.com/fnw/dados-enade-visualizacao-2018-1" target="_blank">link</a>
+      </font>
+    </td>
+</tr>
+<!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/cars-2018_1.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: ENADE Micro-data</b>
+          </br>Giovanni Paolo (gpsc@cin.ufpe.br)
+    	</br>Projeto: <a href="https://giovannipcarvalho.github.io/carclassifieds-visualizacao-2018-1/" target="_blank">link</a>
+      </font>
+    </td>
+</tr>
+<!----------------------------------------------------------->
     <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/vasf-2018_1.png" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
         <b>T&iacute;tulo: Perfil dos Estudantes Pré-universitários</b>
           </br>Victor Ferreira (vasf@cin.ufpe.br)
     	</br>Projeto: <a href="https://vasf22.github.io/perfilestudantes/" target="_blank">link</a>
+      </font>
+    </td>
+</tr>
+<!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/deputados-2018_1.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Perfil dos Deputados</b>
+          </br>Victor Pimenta (vfp@cin.ufpe.br)
+    	</br>Projeto: <a href="https://vfpimenta.github.io/" target="_blank">link</a>
+      </font>
+    </td>
+</tr>
+<!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/lola-2018_1.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: My experience at Lollapalooza</b>
+          </br>Déborah Mesquita (dhsm@cin.ufpe.br)
+    	</br>Projeto: <a href="https://medium.freecodecamp.org/how-and-why-i-used-plotly-instead-of-d3-to-visualize-my-lollapalooza-data-d48345e2ca68" target="_blank">link</a>
+      </font>
+    </td>
+</tr>
+<!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/pluto-2018_1.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Cenário Urbano NYC</b>
+          </br>Edcley da Silva (ejs2@cin.ufpe.br)
+    	</br>Projeto: <a href="https://edcleyjs.github.io/cenario-urbano-NYC-visualizacao-2018-1/" target="_blank">link</a>
+      </font>
+    </td>
+</tr>
+<!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/ifjab-2018_1.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Perfil Alunos IF-JAB</b>
+          </br> Havana Andrade (hdaa@cin.ufpe.br)
+    	</br>Projeto: <a href="https://hdaa.github.io/alunos_IF_JAB-visualizacao-2018-1/" target="_blank">link</a>
       </font>
     </td>
 </tr>
@@ -134,7 +194,29 @@
 	</br>Projeto: <a href="https://mhpr.github.io/ComEx-visualizacao-2018-1/" target="_blank">link</a>
       </font>
     </td>
-    </tr>
+</tr>
+    <!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/refugiados-2018_1.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: ComEx</b>
+        </br>Jônatas de Oliveira (joc@cin.ufpe.br)
+	</br>Valdemiro Vieira (vrvs@cin.ufpe.br)
+	</br>Projeto: <a href="https://vrvs.github.io/Refugiados-visualizacao-2018-1/src/index.html" target="_blank">link</a>
+      </font>
+    </td>
+</tr>
+<!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/college-2018_1.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: College score map</b>
+        </br>João Veras (jhgv@cin.ufpe.br)
+	</br>Robertson Novelino (rnff@cin.ufpe.br)
+	</br>Projeto: <a href="https://jhgv.github.io/collegescorecardmap/index.html" target="_blank">link</a>
+      </font>
+    </td>
+</tr>
     <!----------------------------------------------------------->
     <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/Biciflow-2018_1.png" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
