--- a/2018_1.html
+++ b/2018_1.html
@@ -53,7 +53,7 @@
 	<div class="row">
 	  <div class="col-md-12">
 	    <div id="header">
-	      <h1 class="title">Projetos 2017.2</h1>
+	      <h1 class="title">Projetos 2018.1</h1>
 	    </div>
 	    <div id="course-information" class="section level3">
 
@@ -184,6 +184,16 @@
       </font>
     </td>
 </tr>
+<!----------------------------------------------------------->
+    <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/personality-2018_1.png" height="150px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Personalidade e Preferências Musicais</b>
+          </br> Delando Júnior (ldsmj@cin.ufpe.br)
+    	</br>Projeto: <a href="https://github.com/delandojunior/personality-musicPreferences-DataVis2018.1" target="_blank">link</a>
+      </font>
+    </td>
+</tr>
     <!----------------------------------------------------------->
     <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/ComEx-2018_1.png" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
@@ -199,7 +209,7 @@
     <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/refugiados-2018_1.png" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
-        <b>T&iacute;tulo: ComEx</b>
+        <b>T&iacute;tulo: Refugees</b>
         </br>Jônatas de Oliveira (joc@cin.ufpe.br)
 	</br>Valdemiro Vieira (vrvs@cin.ufpe.br)
 	</br>Projeto: <a href="https://vrvs.github.io/Refugiados-visualizacao-2018-1/src/index.html" target="_blank">link</a>
@@ -243,7 +253,18 @@
     </td>
     </tr>
     <!----------------------------------------------------------->
-
+ <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/shark-2018_1.png" height="100px"> </td>
+    <td width="70%" align="left" valign="middle" bgcolor="white">
+      <font size="3" color="black">	      
+        <b>T&iacute;tulo: Shark Attacks</b>
+          </br> Albertinin Mourato (ams11@cin.ufpe.br)
+	  </br> Danielle Sales (dso@cin.ufpe.br)
+          </br> Paulo Lasalvia (pglj2@cin.ufpe.br)
+	</br>Projeto: <a href="https://github.com/danisales/sharkattacks-visualizacao-2018-1" target="_blank">link</a>
+      </font>
+    </td>
+    </tr>
+    <!----------------------------------------------------------->
 
     
 
