--- a/2018_1.html
+++ b/2018_1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="pt">
   <head>    
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <meta http-equiv="Content-Language" content="pt-br">
