--- a/2018_1.html
+++ b/2018_1.html
@@ -64,7 +64,7 @@
 <td width="70%" align="left" valign="middle" bgcolor="white"> <font size="3" color="black">	      
     <b>T&iacute;tulo: Summer Eletrohits 2017</b>
     <br>Alexsandro Carvalho (avsc@cin.ufpe.br)
-    <br>José Murilo (jmsmf@cin.ufpe.br)
+    <br>Jos&eacute; Murilo (jmsmf@cin.ufpe.br)
     <br>Paula Vaz (pcosv@cin.ufpe.br)
     <br>Victor Leal (vlpaa@cin.ufpe.br)    
     <br>Projeto: <a href="https://pcosv.github.io/summer-eletrohits-2017/" target="_blank">link</a> 
@@ -138,7 +138,7 @@
     <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/vasf-2018_1.png" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
-        <b>T&iacute;tulo: Perfil dos Estudantes Pré-universitários</b>
+        <b>T&iacute;tulo: Perfil dos Estudantes Pr&eacute;-universit&aacute;rios</b>
           </br>Victor Ferreira (vasf@cin.ufpe.br)
     	</br>Projeto: <a href="https://vasf22.github.io/perfilestudantes/" target="_blank">link</a>
       </font>
@@ -159,7 +159,7 @@
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
         <b>T&iacute;tulo: My experience at Lollapalooza</b>
-          </br>Déborah Mesquita (dhsm@cin.ufpe.br)
+          </br>D&eacute;borah Mesquita (dhsm@cin.ufpe.br)
     	</br>Projeto: <a href="https://medium.freecodecamp.org/how-and-why-i-used-plotly-instead-of-d3-to-visualize-my-lollapalooza-data-d48345e2ca68" target="_blank">link</a>
       </font>
     </td>
@@ -168,7 +168,7 @@
     <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/pluto-2018_1.png" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
-        <b>T&iacute;tulo: Cenário Urbano NYC</b>
+        <b>T&iacute;tulo: Cen&aacute;rio Urbano NYC</b>
           </br>Edcley da Silva (ejs2@cin.ufpe.br)
     	</br>Projeto: <a href="https://edcleyjs.github.io/cenario-urbano-NYC-visualizacao-2018-1/" target="_blank">link</a>
       </font>
@@ -221,7 +221,7 @@
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
         <b>T&iacute;tulo: College score map</b>
-        </br>João Veras (jhgv@cin.ufpe.br)
+        </br>Jo&atilde;o Veras (jhgv@cin.ufpe.br)
 	</br>Robertson Novelino (rnff@cin.ufpe.br)
 	</br>Projeto: <a href="https://jhgv.github.io/collegescorecardmap/index.html" target="_blank">link</a>
       </font>
@@ -233,7 +233,7 @@
       <font size="3" color="black">	      
         <b>T&iacute;tulo: Biciflow</b>
           </br> Marcio Mendes (mmcj@cin.ufpe.br)
-	  </br> João Paulo Silva (jpsl2@cin.ufpe.br)
+	  </br> Jo&atilde;o Paulo Silva (jpsl2@cin.ufpe.br)
           </br> Paulo Henrique Muniz (phmb3@cin.ufpe.br)
 	</br>Projeto: <a href="https://pauloluna.github.io/biciflow/index.html" target="_blank">link</a>
       </font>
