--- a/2018_1.html
+++ b/2018_1.html
@@ -128,7 +128,7 @@
     <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/cars-2018_1.png" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
-        <b>T&iacute;tulo: ENADE Micro-data</b>
+        <b>T&iacute;tulo: Car Classifieds</b>
           </br>Giovanni Paolo (gpsc@cin.ufpe.br)
     	</br>Projeto: <a href="https://giovannipcarvalho.github.io/carclassifieds-visualizacao-2018-1/" target="_blank">link</a>
       </font>
