--- a/2018_1.html
+++ b/2018_1.html
@@ -188,8 +188,8 @@
     <td width="20%" height="175px" align="center" valign="middle" bgcolor="white"> <img src="figs/personality-2018_1.png" height="150px"> </td>
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
-        <b>T&iacute;tulo: Personalidade e Preferências Musicais</b>
-          </br> Delando Júnior (ldsmj@cin.ufpe.br)
+        <b>T&iacute;tulo: Personalidade e Prefer&ecirc;ncias Musicais</b>
+          </br> Delando J&uacute;nior (ldsmj@cin.ufpe.br)
     	</br>Projeto: <a href="https://github.com/delandojunior/personality-musicPreferences-DataVis2018.1" target="_blank">link</a>
       </font>
     </td>
@@ -210,7 +210,7 @@
     <td width="70%" align="left" valign="middle" bgcolor="white">
       <font size="3" color="black">	      
         <b>T&iacute;tulo: Refugees</b>
-        </br>Jônatas de Oliveira (joc@cin.ufpe.br)
+        </br>J&ocirc;natas de Oliveira (joc@cin.ufpe.br)
 	</br>Valdemiro Vieira (vrvs@cin.ufpe.br)
 	</br>Projeto: <a href="https://vrvs.github.io/Refugiados-visualizacao-2018-1/src/index.html" target="_blank">link</a>
       </font>
